# CMakeProject

./: .gitignore  CMakeLists.txt  CMakelists.txt  Loo.cpp  Loo.h  main.cpp  makefile
first_folder/: Foo.cpp  Foo.h
libTest/libTest2/: LibTest2.cpp  LibTest2.h
second_folder/: Boo.cpp  Boo.h
tests/: CMakeLists.txt  FirstTest.cpp
